@@ -49,21 +49,15 @@
 //============================================================================
 
 #include "test_config.h"
+#include "TP_Reactor_Test.h"
 
 #include "ace/Signal.h"
 #include "ace/Service_Config.h"
-#include "ace/INET_Addr.h"
-#include "ace/SOCK_Connector.h"
-#include "ace/SOCK_Acceptor.h"
-#include "ace/SOCK_Stream.h"
 #include "ace/Get_Opt.h"
 #include "ace/streams.h"
 
 #include "ace/Reactor.h"
 #include "ace/TP_Reactor.h"
-#include "ace/Acceptor.h"
-#include "ace/Connector.h"
-#include "ace/Svc_Handler.h"
 
 ACE_RCSID(TPReactor, TPReactor_Test, "TPReactor_Test.cpp,v 1.27 2000/03/07 17:15:56 schmidt Exp")
 
@@ -79,8 +73,6 @@ static const ACE_TCHAR *host = 0;
 
 // number of Senders instances
 static size_t senders = 1;
-const  size_t MAX_SENDERS = 100;
-const  size_t MAX_RECEIVERS = 1000;
 
 // duplex mode: == 0 half-duplex
 //              != 0 full duplex
@@ -246,68 +238,6 @@ MyTask::svc (void)
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT (" (%t) MyTask finished\n")));
   return 0;
 }
-
-// *************************************************************
-//   Receiver and Acceptor
-// *************************************************************
-// forward declaration
-class Acceptor;
-
-class Receiver : public ACE_Svc_Handler<ACE_SOCK_STREAM, ACE_MT_SYNCH>
-{
-  friend class Acceptor;
-public:
-
-  Receiver (Acceptor * acceptor=0, int index=-1);
-
-  ~Receiver (void);
-
-  // virtual from ACE_Svc_Handler<>
-  virtual int open (void * pVoid);
-
-  // virtual from ACE_Event_Handler
-  virtual int handle_input (ACE_HANDLE h);
-  virtual int handle_output (ACE_HANDLE h);
-  virtual int handle_close (ACE_HANDLE h , ACE_Reactor_Mask mask);
-
-private:
-  int  terminate_io (ACE_Reactor_Mask mask);
-  int  initiate_io (ACE_Reactor_Mask mask);
-  int  check_destroy (void);
-
-  Acceptor * acceptor_;
-  size_t index_;
-  int  flg_mask_;
-
-  ACE_Recursive_Thread_Mutex mutex_;
-};
-
-// *************************************************************
-
-class Acceptor : public ACE_Acceptor<Receiver,ACE_SOCK_ACCEPTOR>
-{
- friend class Receiver;
-public:
- size_t get_number_sessions (void) { return sessions_; }
-
- Acceptor (void);
- virtual ~Acceptor (void);
-
- void stop (void);
- int start (const ACE_INET_Addr & addr);
-
- //	virtual from ACE_Acceptor<Receiver,ACE_SOCK_ACCEPTOR>
- virtual int make_svc_handler (Receiver * & sh);
-
-private:
-
-   ACE_Recursive_Thread_Mutex mutex_;
-   size_t sessions_;
-   Receiver *list_receivers_[MAX_RECEIVERS];
-
-   void on_new_receiver (Receiver & rcvr);
-   void on_delete_receiver (Receiver & rcvr);
-};
 
 // *************************************************************
 
@@ -626,71 +556,6 @@ Receiver::handle_output (ACE_HANDLE h)
 
   return check_destroy ();
 }
-
-// *******************************************
-//   Sender
-// *******************************************
-
-class Connector;
-
-class Sender : public ACE_Svc_Handler<ACE_SOCK_STREAM,ACE_MT_SYNCH>
-{
-  friend class Connector;
-
-public:
-  Sender (Connector * connector=0, int index=-1);
-
-  ~Sender (void);
-
-  // virtual from ACE_Svc_Handler<>
-  virtual int open (void * pVoid);
-
-  // virtual from ACE_Event_Handler
-  virtual int handle_input (ACE_HANDLE h);
-  virtual int handle_output (ACE_HANDLE h);
-  virtual int handle_close (ACE_HANDLE h , ACE_Reactor_Mask mask);
-
-private:
-  int  terminate_io (ACE_Reactor_Mask mask);
-  int  initiate_io (ACE_Reactor_Mask mask);
-  int  initiate_write ();
-  int  check_destroy (void);
-
-  Connector * connector_;
-  size_t  index_;
-  int  flg_mask_;
-
-  ACE_Recursive_Thread_Mutex mutex_;
-
-  char send_buf_ [1024];
-};
-
-// *************************************************************
-
-class Connector: public ACE_Connector<Sender,ACE_SOCK_CONNECTOR>
-{
-  friend class Sender;
-public:
-  long get_number_sessions (void) { return sessions_; }
-
-  Connector ();
-  virtual ~Connector ();
-
-  void stop ();
-  int  start (const ACE_INET_Addr & addr , int num);
-
-  //	virtual from ACE_Connector<>
-  virtual int make_svc_handler (Sender * & sh);
-
-private:
-
-  ACE_Recursive_Thread_Mutex mutex_;
-  size_t  sessions_;
-  Sender * list_senders_ [MAX_SENDERS];
-
-  void on_new_sender (Sender & sndr);
-  void on_delete_sender (Sender & sndr);
-};
 
 // *************************************************************
 
